# asaplib

./: .gitignore  CMakeLists.txt  LICENSE-3RD-PARTY.md  README.md
doxygen/: mainpage.dox  namespaces.dox
include/asap/: a3parameter.h  asap3def.h  asap3factory.h  iclient.h  irequest.h  iresponse.h  itelegram.h
script/: utillib.cmake
src/: a3parameter.cpp  asap3client.cpp  asap3client.h  asap3def.cpp  asap3factory.cpp  asap3helper.cpp  asap3helper.h  ctasap3client.cpp  ctasap3client.h  iclient.cpp  irequest.cpp  iresponse.cpp  itelegram.cpp  queryparameters.cpp  queryparameters.h
test/: CMakeLists.txt  test_client.cpp
